# cerebellum-jax

./: .gitignore  README.md  main.py  pyproject.toml
config/: baseline_train_config.toml  config.py  eval_config.toml
docs/: diagram.py  io_fix.tex  io_synchrony_methods.tex  methods.tex  model_arch.md  model_diagram.mermaid
experiments/: analysis_io_synchrony_experiment.py  io_synchrony.ipynb  io_synchrony.py
logs/: baseline_training_log.csv
models/: base_model.py  cerebellum_jax.py  embodied.py  jax_basemodel.py  network.py  synapses.py
models/cells/: dcn.py  io.py  io_numpy.py  ou_process.py  pc.py  pc2 copy.py
models/mouse/: eigenmode.py  index.html  mouse-free.xml
notebooks/: baseline.ipynb  test.ipynb
scripts/: test_io_brainpy.py  test_network.py  test_pc.py
trainer/: callbacks.py  trainer.py
utils/: analysis_utils.py  connectivity.py
