[project]
name = "cerebellum-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.10.2",
    "gymnasium>=1.0.0",
    "jax>=0.4.35",
    "jax-metal>=0.1.1",
    "jaxlib>=0.4.35",
    "numpy>=2.1.3",
    "optax>=0.2.4",
    "wheel>=0.45.1",
]
