[project]
name = "cerebellum-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffrax>=0.6.2",
    "flax>=0.10.2",
    "gymnasium[classic-control]>=1.0.0",
    "ipykernel>=6.29.5",
    "jax>=0.4.35",
    "jax-metal>=0.1.1",
    "jaxlib>=0.4.35",
    "matplotlib>=3.10.0",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "optax>=0.2.4",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "wheel>=0.45.1",
]
