[project]
name = "cerebellum-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brainpy>=2.6.0.post20241205",
    "jax>=0.4.35",
    "jaxlib>=0.4.35",
    "matplotlib>=3.10.0",
    "numpy>=2.1.3",
    "optax>=0.2.4",
    "pandas>=2.2.3",
    "brax"
]
